# magma-cycling-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml
docs/: weather-module.md
magma_cycling_tools/: __init__.py
magma_cycling_tools/circuits/: __init__.py  models.py
magma_cycling_tools/ops/: __init__.py  data_repo_sync.py
magma_cycling_tools/weather/: __init__.py  factory.py  models.py  route_sampling.py
magma_cycling_tools/weather/providers/: base.py  meteofrance_community.py  meteofrance_official.py
tests/circuits/: test_models.py
tests/ops/: test_data_repo_sync.py
tests/weather/: conftest.py  test_factory.py  test_models.py  test_providers_community.py  test_route_sampling.py
tests/weather/fixtures/: mf_forecast_chas.json  mf_rain_1h_chas.json  mf_vigilance_63.json
