[tool.poetry]
name = "magma-cycling-tools"
version = "0.2.0"
description = "Ops tooling et adapters pour magma-cycling (data_repo_sync, scrapers Zwift, migrations)"
authors = ["Stephane Jouve"]
license = "MIT"
readme = "README.md"
packages = [{include = "magma_cycling_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
# Dépendance runtime pour `_alert_talk()` dans `ops/data_repo_sync.py`
# (import `outillages.nextcloud_talk.send_message`). Sans cette dep, le
# code attrapait silencieusement ImportError et les alertes infra-alerts
# ne fire-aient jamais en cas de pull-rebase fail / push rejected — bug
# invisible ~13 jours côté container `magma-cycling-cron-jobs-1` stack #33
# (cf. msg admin id=2203 sur 1:1 admin-leader, ADR v5 prérequis Étape 1).
#
# Repo privé : le container build doit avoir une clé SSH avec read access
# au repo stephanejouve/outillages pour que poetry install résolve.
outillages = {git = "ssh://git@github.com/stephanejouve/outillages.git", tag = "v0.11.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^24.3.0"
ruff = "^0.8.0"
isort = "^7.0.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
data-repo-sync = "magma_cycling_tools.ops.data_repo_sync:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
